@@ -1,4 +1,3 @@
-
 set(soma_python_scripts
   AnaGen.py
   ConfGen.py
@@ -18,5 +17,10 @@ set(SOMA_PYTHON_INSTALL_DIR "\"${CMAKE_INSTALL_PREFIX}/python-script\"")
 
 foreach( SCRIPT ${soma_python_scripts})
   configure_file("${SCRIPT}.in" "${SCRIPT}")
-  install(FILES "${CMAKE_CURRENT_BINARY_DIR}/${SCRIPT}" DESTINATION python-script PERMISSIONS OWNER_EXECUTE OWNER_READ GROUP_EXECUTE GROUP_READ WORLD_READ WORLD_EXECUTE)
+  #Configure the files only as executable if they have a SHEBANG
+  if(DEFINED SOMA_PYTHON_SHEBANG)
+    install(FILES "${CMAKE_CURRENT_BINARY_DIR}/${SCRIPT}" DESTINATION python-script PERMISSIONS OWNER_EXECUTE OWNER_READ GROUP_EXECUTE GROUP_READ WORLD_READ WORLD_EXECUTE)
+  else()
+    install(FILES "${CMAKE_CURRENT_BINARY_DIR}/${SCRIPT}" DESTINATION python-script PERMISSIONS OWNER_READ GROUP_READ WORLD_READ)
+    endif()
 endforeach(SCRIPT ${soma_python_scripts})
