@@ -1,4 +1,4 @@
-#!/usr/bin/env python
+@SOMA_PYTHON_SHEBANG@
 #   Copyright (C) 2016-2019 Ludwig Schneider
 #
 # This file is part of SOMA.
