@@ -4,13 +4,16 @@ Please add your contributions.
 v0.7.0 not-yet-released
 	* Reactions. The user defines zones, where
 	one polymer type is converted into another. 	LS
-
+	* CMake python. Identify suitable python
+	environment via CMake				LS
 	
 v0.6.2 not-yet-released
 
 	* fix problem with exact area51 genration
 	of polymers and its test.        MM and LS
-	
+	* enable extra SOMA_C_FLAGS as
+	environment added to C_FLAGS	LS
+
 v0.6.1 23/1/19
 	* fix a problem with memory management for
 	  structure factors		LS
